fixed resume button on firefox

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -148,7 +148,7 @@ a {
 #history {}
   #resume {
   height: 16px;
-  width: 70px;
+  width: 78px;
   background-color: #e3791c;
   border: solid 2px #202c36;
   border-radius: 10px;
